[Fix] Ignoring more bundles in I18nMessage